z-index fix

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -198,7 +198,7 @@ hr {
 }
 
 #radar-container {
-  z-index: 5;
+  z-index: 1073;
   position: absolute;
   top:0;
   bottom:0;
